--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -36,22 +35,19 @@
 
   <section id="food" class="food-samples">
     <h2>Our Delicious Meals</h2>
-    <div class="food-grid">
-      <div class="food-item">
-        <img src="food 1.png" alt="Roasted Chicken" />
-        <h3>Roasted Chicken</h3>
-        <p>KES 800</p>
-      </div>
-      <div class="food-item">
-        <img src="food 2.png" alt="Grilled Beef" />
-        <h3>Grilled Beef</h3>
-        <p>KES 950</p>
-      </div>
-      <div class="food-item">
-        <img src="food 3.png" alt="Fried Fish & Chips" />
-        <h3>Fried Fish & Chips</h3>
-        <p>KES 700</p>
-      </div>
+    <div class="food-gallery">
+      <div class="food-item"><img src="food 1.png" alt="Grilled Chicken"><div class="food-name">Grilled Chicken</div><div class="food-price">Ksh 800</div></div>
+      <div class="food-item"><img src="food 2.png" alt="Beef Stew"><div class="food-name">Beef Stew</div><div class="food-price">Ksh 700</div></div>
+      <div class="food-item"><img src="food 3.png" alt="Vegetable Salad"><div class="food-name">Vegetable Salad</div><div class="food-price">Ksh 500</div></div>
+      <div class="food-item"><img src="food 4.png" alt="Fish Fillet"><div class="food-name">Fish Fillet</div><div class="food-price">Ksh 900</div></div>
+      <div class="food-item"><img src="food 5.png" alt="Pasta Alfredo"><div class="food-name">Pasta Alfredo</div><div class="food-price">Ksh 750</div></div>
+      <div class="food-item"><img src="food 6.png" alt="Fried Rice"><div class="food-name">Fried Rice</div><div class="food-price">Ksh 600</div></div>
+      <div class="food-item"><img src="food 7.png" alt="BBQ Ribs"><div class="food-name">BBQ Ribs</div><div class="food-price">Ksh 1,200</div></div>
+      <div class="food-item"><img src="food 8.png" alt="Cheeseburger"><div class="food-name">Cheeseburger</div><div class="food-price">Ksh 650</div></div>
+      <div class="food-item"><img src="food 9.png" alt="Sushi Platter"><div class="food-name">Sushi Platter</div><div class="food-price">Ksh 1,500</div></div>
+      <div class="food-item"><img src="food 10.png" alt="Chapati & Beans"><div class="food-name">Chapati & Beans</div><div class="food-price">Ksh 400</div></div>
+      <div class="food-item"><img src="food 11.png" alt="Tandoori Chicken"><div class="food-name">Tandoori Chicken</div><div class="food-price">Ksh 950</div></div>
+      <div class="food-item"><img src="food 12.png" alt="Pizza Margherita"><div class="food-name">Pizza Margherita</div><div class="food-price">Ksh 1,000</div></div>
     </div>
   </section>
 
@@ -71,9 +67,9 @@
     <div class="social">
       <a href="https://web.facebook.com/JeewelKe"><i class="fab fa-facebook"></i></a>
       <a href="https://www.instagram.com/jeewels_kitchen/"><i class="fab fa-instagram"></i></a>
-      <a href=https://www.tiktok.com/search?q=jewels%20kitchen&t=1742820140896"><i class="fab fa-tiktok"></i></a>
+      <a href="https://www.tiktok.com/search?q=jewels%20kitchen"><i class="fab fa-tiktok"></i></a>
     </div>
-    <p>&copy; 2025 Jewels Kitchen</p>
+    <p>&copy; Designed by Royal Graphics</p>
   </footer>
 </body>
 </html>
