--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
   <header>
     <h1>Jewels Kitchen</h1>
     <nav>
+      <div class= "Nav">
       <a href="#banner">Home</a>
       <a href="#services">Services</a>
       <a href="#food">Menu</a>
       <a href="#booking">Booking</a>
+    </div>
     </nav>
   </header>
 
@@ -53,12 +55,12 @@
 
   <section id="booking" class="booking">
     <h2>Book With Us</h2>
-    <form>
-      <input type="text" placeholder="Full Name" required />
-      <input type="email" placeholder="Email Address" required />
-      <input type="text" placeholder="Event Type" required />
-      <input type="date" required />
-      <textarea placeholder="Additional Details"></textarea>
+    <form action="https://formspree.io/f/mrbpllgl" method="POST">
+      <input type="text" name="name" placeholder="Full Name" required />
+      <input type="email" name="email" placeholder="Email Address" required />
+      <input type="text" name="event" placeholder="Event Type" required />
+      <input type="date" name="date" required />
+      <textarea name="details" placeholder="Additional Details"></textarea>
       <button type="submit">Submit</button>
     </form>
   </section>
